Adding Nesting, Media, Refactored, MVP Score

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   
      
-  <div class="container home">
+  <header class="container home">
     <nav>
       <h1>Fun Bus</h1>
       <div class='link-box'>
